add kafka note